--- a/src/main/resources/view/PropertyListCard.fxml
+++ b/src/main/resources/view/PropertyListCard.fxml
@@ -9,28 +9,34 @@
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.VBox?>
 
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.layout.StackPane?>
 <HBox id="cardPane" fx:id="cardPane" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
     <GridPane HBox.hgrow="ALWAYS">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="150"/>
         </columnConstraints>
-      <VBox alignment="CENTER_LEFT" minHeight="105" GridPane.columnIndex="0">
+        <VBox alignment="CENTER_LEFT" minHeight="105" GridPane.columnIndex="0">
             <padding>
                 <Insets top="5" right="5" bottom="5" left="15"/>
             </padding>
-            <HBox spacing="0.5" alignment="CENTER_LEFT">
+            <HBox spacing="0.5" alignment="TOP_LEFT">
                 <Label fx:id="id" styleClass="cell_big_label">
                     <minWidth>
                         <!-- Ensures that the label text is never truncated -->
                         <Region fx:constant="USE_PREF_SIZE"/>
                     </minWidth>
                 </Label>
-                <Label fx:id="name" text="\$first" styleClass="cell_big_label"/>
+                <VBox>
+                    <Label fx:id="postalCode" styleClass="cell_big_label" text="\$postalCode"/>
+                    <Label fx:id="unitNumber" styleClass="cell_big_label" text="\$unitNumber"/>
+                    <Label fx:id="houseNumber" styleClass="cell_big_label" text="\$houseNumber"/>
+                    <Label fx:id="name" styleClass="cell_small_label" text="\$name"/>
+                </VBox>
             </HBox>
             <FlowPane fx:id="tags"/>
-            <Label fx:id="phone" styleClass="cell_small_label" text="\$phone"/>
-            <Label fx:id="address" styleClass="cell_small_label" text="\$address"/>
-            <Label fx:id="email" styleClass="cell_small_label" text="\$email"/>
+            <Label styleClass="cell_big_label" text="Owner(s)"/>
+            <StackPane fx:id="ownerListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
         </VBox>
     </GridPane>
 </HBox>
