--- a/src/main/resources/view/OwnerListPanel.fxml
+++ b/src/main/resources/view/OwnerListPanel.fxml
@@ -9,7 +9,5 @@
       <padding>
          <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
       </padding>
-      <VBox.margin>
-         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-      </VBox.margin></ListView>
+</ListView>
 </VBox>
